2004-11-02  John Luke  <john.luke@gmail.com>

	* Services/File/RecentOpen.cs: use simpler RecentFiles AddWithLimit
	* Services/File/RecentFiles.cs: sort and return items in the right order
	among some other incremental improvements, should also fix bug #68999
	* Commands/AutoStartCommands.cs: revert Todds workaround from yesterday

2004-11-01	Fawad Halim  <fawad@fawad.net>

	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyParameter.cs
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyMethod.cs
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyReturnType.cs
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyEvent.cs
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyAttribute.cs
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyField.cs
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyProperty.cs:
	Added using aliases for AssemblyReader and SharpCustomAttribute
	to allow compilation with mono HEAD

2004-11-01  Todd Berman  <tberman@off.net>

	* Commands/AutoStartCommands.cs: Open the real last project.

2004-11-01  Todd Berman  <tberman@off.net>

	* Services/File/RecentOpen.cs: Properly handle if the renaming occurs
	on a Directory, or if it is using SourceFile instead of FileName.

	Need to investigate why SourceFile and FileName both exist.

2004-10-29  Todd Berman  <tberman@off.net>

	* Commands/FileCommands: Fix SaveAs.

2004-10-29  Todd Berman  <tberman@off.net>

	* Commands/FileCommands.cs: Patch from Valters Svabe
	<valters@inbox.lv> to close bug #62300

2004-10-28  Todd Berman  <tberman@off.net>

	* Services/File/RecentFiles.cs: Remove C.WL

2004-10-27  Todd Berman  <tberman@off.net>

	* Commands/AutoStartCommands.cs: Fix the Load Previous Project on
	Startup option.

2004-10-27  John Luke  <john.luke@gmail.com>

	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyParameter.cs
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyMethod.cs
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyReturnType.cs