@@ -5,6 +5,10 @@
 	among some other incremental improvements, should also fix bug #68999
 	* Commands/AutoStartCommands.cs: revert Todds workaround from yesterday
 
+	* Services/File/RecentOpen.cs:
+	* Services/Project/DefaultProjectService:
+	* Commands/MenuItemBuilders.cs: display project name for projects
+
 2004-11-01	Fawad Halim  <fawad@fawad.net>
 
 	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyParameter.cs
